--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -92,9 +92,21 @@ nav{
             color:white;
             height:100vh;
             width: 50%;
+            transition: all 1s ease;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            font-size: 24px;
 
             &.active{
                 right:0;
+            }
+
+            @include sm{
+                a{
+                    display:initial;
+                }
             }
         }
     }
