--- a/src/layout.scss
+++ b/src/layout.scss
@@ -1,27 +1,33 @@
 @import "./responsive.scss";
 
-.layout{
-    background-color: rebeccapurple;
+.layout{    
     height:100vh;
     max-width: 1366px;
     margin: 0 auto;
     padding-left: 20px;
     padding-right: 20px;
+    display: flex;
+    flex-direction: column;
 
     @include lg{
-        background-color: rgb(133, 91, 76);
+        // background-color: rgb(133, 91, 76);
         max-width: 1280px;
     }   
 
     @include md{
-        background-color: green;
+        // background-color: green;
         max-width: 768px;
     }
 
     @include sm{
-        background-color: red;
+        // background-color: red;
         max-width: 640px;
     }
 
+    .content{
+        // background-color: rebeccapurple;
+        // height:calc(100vh - 100px);
+        flex:1;
+    }
     
 }
