--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -62,14 +62,17 @@
             }
 
             @include md{
-                width:auto;
-
+                width:200px;
                 &:nth-child(2), &:nth-child(3){
-                    width:auto;
+                    width:200px;
                 }
             }
 
             @include sm{
+                width: auto;
+                &:nth-child(2), &:nth-child(3){
+                    width: auto;
+                }
                 padding: 20px;
                 border: 1px solid #999;
             }
