--- a/src/routes/layout/layout.scss
+++ b/src/routes/layout/layout.scss
@@ -27,7 +27,8 @@
     .content{
         // background-color: rebeccapurple;
         // height:calc(100vh - 100px);
-        flex:1;
+        // flex:1;
+        height: calc(100vh - 100px);
     }
     
 }
