--- a/src/routes/layout/layout.scss
+++ b/src/routes/layout/layout.scss
@@ -8,6 +8,7 @@
     padding-right: 20px;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 
     @include lg{
         // background-color: rgb(133, 91, 76);
